# ozon_print

./: .gitignore  Cargo.toml  README.md  build.rs  config_for_ozon_print.example.json
src/: app.rs  cli.rs  config.rs  error.rs  main.rs  preview.rs  printer.rs  scanner.rs  tui.rs  ui.rs
