[package]
name = "ozon_print"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
fs-err = "2.11"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
lopdf = "0.34"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.12"
pretty_assertions = "1.4"

[build-dependencies]
embed-resource = "3.0.9"
